--- a/app/components/Navbar/navbar.module.css
+++ b/app/components/Navbar/navbar.module.css
@@ -13,6 +13,16 @@
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
 }
 
+.listItem {
+  transition: all ease-in-out 0.1s;
+  padding: 0 5px;
+}
+
+.listItem:hover {
+  color: var(--yellow-100);
+  border-right: 1px solid var(--yellow-300);
+}
+
 /* :root {
   --bg-color: #fefefe;
   --primary-color: #10171e;
