--- a/app/components/Top/top.module.css
+++ b/app/components/Top/top.module.css
@@ -1,11 +1,15 @@
 .container {
   padding: 0 10%;
   background: url("/background.jpg");
-  height: 500px;
+  height: 600px;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   color: #fefefe;
+}
+
+.text {
+  padding-top: 150px;
 }
 
 .container h1 {
@@ -14,7 +18,28 @@
 }
 
 .container h2 {
-  font-size: 32px;
+  font-size: 22px;
   letter-spacing: 3px;
   font-weight: 100;
+}
+
+.register,
+.login {
+  padding: 10px 20px;
+  margin: 20px 7px;
+  border-radius: 4px 8px;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 0.5px;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+.register {
+  background-color: var(--yellow-500);
+}
+
+.login {
+  background-color: var(--red-500);
 }
