--- a/app/components/Slider/slider.module.css
+++ b/app/components/Slider/slider.module.css
@@ -1,6 +1,6 @@
 .container {
-  padding: 0 10%;
-  margin: 100px 0;
+  padding: 0 7%;
+  margin: -40px 0;
 }
 
 .container h2 {
@@ -15,8 +15,8 @@
 
 .slider {
   background-color: rgb(238, 238, 238);
-  padding: 10px 20px;
-  border-radius: 10px;
+  padding: 10px;
+  border-radius: 4px;
   box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.2);
 }
 
