--- a/app/components/Footer/footer.module.css
+++ b/app/components/Footer/footer.module.css
@@ -4,7 +4,7 @@
   color: #fefefe;
   padding: 50px 10%;
   display: grid;
-  grid-template-columns: 2fr 1fr 1fr 1fr;
+  grid-template-columns: 2fr 2fr;
   justify-content: center;
   align-items: center;
 }
@@ -40,11 +40,12 @@
 }
 
 .linkHeader {
-  font-size: 14px;
+  font-size: 12px;
   text-transform: uppercase;
-  letter-spacing: 2px;
-  font-weight: 300;
-  margin-bottom: 10px;
+  letter-spacing: 0.5px;
+  font-weight: 700;
+  margin-bottom: 3px;
+  color: var(--yellow-500);
 }
 
 .linkItem {
@@ -53,8 +54,16 @@
   gap: 3px;
   font-size: 13px;
   transition: all ease-in-out 0.2s;
+  margin-bottom: 4px;
 }
 
 .linkItem:hover {
   transform: translateX(2px);
+}
+
+.links {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 0 10%;
 }
