--- a/app/components/Staff/staff.module.css
+++ b/app/components/Staff/staff.module.css
@@ -33,10 +33,10 @@
 
 .social {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   background-color: var(--yellow-300);
-  width: 110px;
   padding: 5px;
   color: #fff;
   border-radius: 5px;
@@ -50,6 +50,7 @@
   font-size: 20px;
   margin: 0 3px;
   transition: 0.1s;
+  margin: 4px 0;
 }
 
 .social a:hover {
