--- a/app/globals.css
+++ b/app/globals.css
@@ -16,3 +16,14 @@
 body {
   background-color: #f9f9f9;
 }
+
+.progress-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 10px;
+  background: var(--red-500);
+  transform-origin: 0%;
+  z-index: 1000;
+}
