--- a/app/components/FoodStory/foodstory.module.css
+++ b/app/components/FoodStory/foodstory.module.css
@@ -1,6 +1,7 @@
 .container {
-  padding: 0 10%;
+  padding: 30px 10%;
   margin: 100px 0;
+  background-color: rgb(240, 240, 240);
 }
 .container h2 {
   font-size: 31px;
@@ -10,4 +11,43 @@
 
 .container p {
   margin-bottom: 20px;
+}
+
+.foodStory {
+  padding: 40px 15px;
+}
+
+.slideItem {
+  border-bottom: 4px solid var(--yellow-300);
+  border-radius: 5px;
+  cursor: pointer;
+  position: relative;
+}
+
+.foodDesc {
+  position: absolute;
+  bottom: 0;
+  background-color: #10171e91;
+  color: #fff;
+  font-size: 13px;
+  padding: 2px 10px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  justify-content: flex-end;
+}
+
+.foodDesc h4 {
+  color: var(--yellow-100);
+  font-size: 19px;
+  font-weight: 900;
+}
+
+.foodDesc p {
+  font-size: 11px;
+}
+
+.container p span {
+  font-weight: 900;
 }
