--- a/app/components/FoodStory/foodstory.module.css
+++ b/app/components/FoodStory/foodstory.module.css
@@ -51,3 +51,14 @@
 .container p span {
   font-weight: 900;
 }
+
+.orderBtn {
+  background-color: var(--red-500);
+  padding: 4px 8px;
+  margin: 5px;
+  border-radius: 5px;
+  text-transform: uppercase;
+  font-size: 10px;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
