--- a/app/components/CoffeeHouse/coffeehouse.module.css
+++ b/app/components/CoffeeHouse/coffeehouse.module.css
@@ -1,6 +1,7 @@
 .container {
-  padding: 0 10%;
+  padding: 50px 10%;
   margin: 100px 0;
+  height: 480px;
 }
 
 .container h2 {
@@ -15,27 +16,12 @@
 
 .imageContainer {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(300px, auto));
   grid-gap: 20px;
 }
 
 .imageItem {
   border-radius: 12px;
-}
-
-.imageDesc {
-  margin: 10px 0;
-  background-color: #10171ee3;
-  color: #fff;
-  font-size: 12px;
-  padding: 10px 20px;
-  width: 90%;
-  line-height: 1.6;
-  position: absolute;
-  bottom: -90px;
-  border-radius: 10px;
-  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
-  color: rgb(255, 241, 180);
 }
 
 .boxContainer {
@@ -44,6 +30,25 @@
   align-items: center;
   justify-content: center;
   position: relative;
+}
+
+.imageDesc {
+  margin: 10px 0;
+  background-color: #10171e89;
+  color: #fff;
+  font-size: 12px;
+  padding: 10px 20px;
+  line-height: 1.6;
+  position: absolute;
+  bottom: -30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
+  color: rgb(255, 241, 180);
 }
 
 .imageDesc span {
