--- a/app/components/Staff/staff.module.css
+++ b/app/components/Staff/staff.module.css
@@ -56,3 +56,17 @@
 .social a:hover {
   color: var(--primary-color);
 }
+
+.readMoreBtn {
+  padding: 10px 20px;
+  margin: 20px 7px;
+  border-radius: 4px 8px;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 0.5px;
+  font-weight: 700;
+  cursor: pointer;
+  background-color: var(--yellow-500);
+  color: #fefefe;
+}
