--- a/app/components/Staff/staff.module.css
+++ b/app/components/Staff/staff.module.css
@@ -15,7 +15,7 @@
 
 .imageContainer {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(250px, auto));
   grid-gap: 35px;
 }
 
