--- a/app/components/Top/top.module.css
+++ b/app/components/Top/top.module.css
@@ -43,3 +43,21 @@
 .login {
   background-color: var(--red-500);
 }
+
+@media screen and (max-width: 694px) {
+  .container h1 {
+    font-size: 52px;
+  }
+}
+
+@media screen and (max-width: 510px) {
+  .container h1 {
+    font-size: 42px;
+  }
+
+  .container h2 {
+    font-size: 16px;
+    letter-spacing: 3px;
+    font-weight: 100;
+  }
+}
