--- a/app/components/Customers/customer.module.css
+++ b/app/components/Customers/customer.module.css
@@ -1,6 +1,10 @@
 .firstContainer {
-  padding: 0 10%;
+  padding: 0 30%;
   margin: 100px 0;
+}
+
+.container {
+  padding: 0 2%;
 }
 
 .firstContainer h2 {
@@ -40,4 +44,18 @@
   border-radius: 50%;
   border: 1px solid var(--yellow-500);
   margin-bottom: 10px;
+}
+
+@media screen and (max-width: 1450px) {
+  .firstContainer {
+    padding: 0 20%;
+    margin: 100px 0;
+  }
+}
+
+@media screen and (max-width: 986px) {
+  .firstContainer {
+    padding: 0 12%;
+    margin: 100px 0;
+  }
 }
