--- a/app/components/Staff/staff.module.css
+++ b/app/components/Staff/staff.module.css
@@ -33,17 +33,18 @@
 
 .social {
   display: flex;
-  gap: 10px;
+  flex-direction: column;
+  gap: 5px;
   justify-content: space-between;
   align-items: center;
-  background-color: var(--yellow-300);
+  background-color: var(--red-500);
   padding: 3px 10px;
   color: #fff;
   border-radius: 5px;
   box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.5);
   position: absolute;
-  bottom: -10px;
-  right: 25px;
+  top: 10px;
+  left: 10px;
 }
 
 .social a {
