--- a/app/components/FoodStory/foodstory.module.css
+++ b/app/components/FoodStory/foodstory.module.css
@@ -62,3 +62,23 @@
   font-weight: 500;
   letter-spacing: 1px;
 }
+
+@media screen and (max-width: 1324px) {
+  .foodDesc p {
+    font-size: 9px;
+  }
+
+  .foodDesc h4 {
+    font-size: 15px;
+  }
+}
+
+@media screen and (max-width: 762px) {
+  .foodDesc p {
+    font-size: 11px;
+  }
+
+  .foodDesc h4 {
+    font-size: 18px;
+  }
+}
